made a lot of changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,9 +9,12 @@
 </head>
 <body>
     <h1>Pokedex API</h1>
-    <main id="container">
-        
+    <main id="all_pokemon_container" class="all_pokemon_container">
+
 
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
